---------------------
- Scyther changelog -
---------------------

Scyther 1.0-beta6 
	
	New features:

	* [Gui] Added Mac support (added universal binary)
	* [Language] Added claim parameter for Reachable claim;
	Reachable,R means that role R should be trusted (as well as the
	actor), but not any other claim. This can be useful for showing
	stronger authentication properties of protocols with more than
	two parties.
	* [Backend] Added '--max-of-role=N' switch (to narrow scenarios)
	* [Backend] Added '--scan-claims' switch (allows for retrieving
	a list of claims)
	* [Scripting] Added 'verifyOne' and 'scanClaims' methods to
	Scyther object, to help with singular claim testing.

	Bugfixes:

	* [Scripting] Fixed bug in python interface backend (e.g. with mpa.py)

Scyther 1.0-beta5 

	* Change of switch semantics.  '--max-attacks=N' now defines the
	  maximum number of attacks per claim.  Previously this was a
	  global maximum for all claims combined.
	* Improved attack graph output.
	* added switch '--errors=FILE' to redirect standard error output
	  to a file.
	* Rewrote parts of the gui code for improved stability.

Scyther 1.0-beta4 

	* (Changelog starts after the release of Scyther 1.0-beta4)